--- a/style.css
+++ b/style.css
@@ -63,9 +63,10 @@ main {
 
 .file-button{
     display: inline-flex;
-    min-height: 40px;
+    min-height: 20px;
     border-radius: 10px;
     background-color: aliceblue;
+    padding: 10px 10px;
 }
 
 .form-body{
@@ -88,4 +89,34 @@ main {
 .form-body.sending::after{
     opacity: 1;
     visibility: visible;
+}
+
+input:focus{
+    outline: none;
+}
+
+input{
+    height: 20px;
+    width: 200px;
+    background-color: #8890a3;
+    border-radius: 5px;
+    border: none;
+}
+
+.formlabe{
+    padding-left: 5px;
+}
+
+.form-item{
+    margin-bottom: 20px;
+}
+
+.form-button{
+    border: none;
+    width: 60px;
+    color: aliceblue;
+    background-color: #8890a3;
+    font-family: 'Montserrat';
+    padding: 5px 12px;
+    border-radius: 15px;
 }
