--- a/style.css
+++ b/style.css
@@ -28,9 +28,9 @@ main {
     box-shadow: 0 0 15px red;
 }
 
-.error{
+/* .error{
     box-shadow: 0 0 15px red;
-}
+} */
 
 .form-input:focus{
     box-shadow: 0 0 15px #8ba5e2;
@@ -119,4 +119,8 @@ input{
     font-family: 'Montserrat';
     padding: 5px 12px;
     border-radius: 15px;
+}
+
+.form-button:active{
+    background-color:#8ba5e2;
 }
