--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ main {
 }
 
 .form-input.error{
-    box-shadow: 0 0 15px red;
+    box-shadow: 0 0 15px red;   
 }
 
 /* .error{
@@ -113,14 +113,24 @@ input{
 
 .form-button{
     border: none;
-    width: 60px;
+    width: 160px;
     color: aliceblue;
     background-color: #8890a3;
     font-family: 'Montserrat';
-    padding: 5px 12px;
     border-radius: 15px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    margin-left: 70px;
 }
 
 .form-button:active{
     background-color:#8ba5e2;
+}
+
+.form{
+    box-shadow: 0 0 15px  #ffff;
+    border-radius: 15px;
+    padding: 10px 10px;
 }
